--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,18 @@
 body{
-    margin: 0;
-    padding: 0;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0.9332107843137255) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    width: 100%;
+    background-image: linear-gradient(90deg,#000658,#0099ff);
 }
 #h1{
     color: white;
 }
 .slider{
-    width: 800px;
-    height: 500px;
+    width: 854px;
+    height: 480px;
+    margin-top: 100px;
+    margin-left: 500px;
     border-radius: 10px;
+    height: 100vh;
     overflow: hidden;
 
 }
