--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,48 @@
-body{
-    height: 100vh;
+.cards{
+    margin: 0 auto;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 20px;
+}
+.card{
+    box-shadow:  0 0 3px rgba(0, 0, 0, 0.2);
+}
+.card_image{
     width: 100%;
-    background-image: linear-gradient(120deg,#000658,#0099ff);
+    display: block;
 }
-#h1{
-    color: white;
-    text-align: center;
+.card_content{
+    line-height: 1.5;
+    font-size: 0.9em;
+    padding: 15px;
+    background-color: yellowgreen;
 }
-.slider{
-    width: 854px;
-    height: 480px;
-    margin-top: 50px;
-    margin-left: 30%;
-    border-radius: 10px;
-    height: 100vh;
-    overflow: hidden;
-
+.card_content>p:first-of-type{
+    margin: 0;
 }
-.slides{
-    width: 500%;
-    height: 500px;
+.card_content>p:last-of-type{
+    margin-top: 0;
+}
+.card_info{
+    padding: 15px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: rgb(48, 49, 49);
+    background-color: rgb(255, 255, 255);
+    font-size: 0.8em;
+    border-bottom: 2px solid rgb(134, 134, 134);
 }
-.slides input{
-    display: none;
+.card_info i{
+    font-size: 0.9em;
+    margin-right: 8px;
 }
-.slide{
-    width: 20%;
-    transition: 2s;
+.card_link{
+    color: turquoise;
+    text-decoration: none;
 }
-.slide img{
-    width: 800px;
-    height: 500px;
-}
-
-.navigation-manual{
-    position: absolute;
-    width: 800px;
-    margin-top: -40px;
-    display: flex;
-    justify-content: center;
-}
-.manual-btn{
-    border: 2px solid #02D8DF;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-.manual-btn:not(:last-child){
-    margin-right: 40px;
-}
-.manual-btn:hover{
-    background-color: #02D8DF;
-}
-#radio1:checked ~ .first{
-    margin-left: 0;
-}
-#radio2:checked ~ .first{
-    margin-left: -20%;
-}
-#radio3:checked ~ .first{
-    margin-left: -40%;
-}
-#radio4:checked ~ .first{
-    margin-left: -60%;
-}
-
-.navigation-auto{
-    position: absolute;
-    display: flex;
-    width: 800px;
-    justify-content: center;
-    margin-top: 460px;
-}
-.navigation-auto div{
-    border: 2px solid  #02D8DF;
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
-}
-.navigation-auto div:not(:last-child){
-    margin-right: 40px;
-}
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background-color:  #02D8DF;
-}
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background-color:  #02D8DF;
-}
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background-color:  #02D8DF;
-}
-#radio4:checked ~ .navigation-auto .auto-btn4{
-    background-color:  #02D8DF;
+.card_link:hover{
+    color: turquoise;
+    text-decoration: underline;
 }
