--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -109,7 +110,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transition: 0.5 ease;
+  transition: 0.5s ease;
 }
 header.sticky {
   background: rgb(0, 217, 255);
@@ -138,12 +139,7 @@ header .navigation a:hover {
 header.sticky .navigation a:hover {
   color: #000;
 }
-/*
-#profile-img {
-  width: 500px;
-  height: auto;
-}
-*/
+
 .title {
   width: 100%;
   display: flex;
@@ -208,4 +204,232 @@ header.sticky .navigation a:hover {
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
+}
+.about .content .col-right .content-title {
+  font-size: 2em;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+.about .content .col-right .paragraph-text {
+  font-size: 1em;
+}
+
+.skills {
+  background: #000016;
+}
+.skills .content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  margin-top: 20px;
+}
+.skills .content .col-left {
+  position: relative;
+  width: 40%;
+}
+.skills .content .col-right {
+  position: relative;
+  width: 40%;
+}
+.skills .content .col-right .bar {
+  margin-bottom: 15px;
+  padding: 10px;
+}
+.skills .content .col-right .bar .info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+.skills .content .col-right .bar .info span {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 2px;
+}
+.skills .content .col-right .bar .line {
+  position: relative;
+  width: 100%;
+  height: 11px;
+  background: #ccc;
+  border-radius: 2px;
+}
+.skills .content .col-right .bar .line:before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 2px;
+}
+.skills .content .col-right .bar .javascript:before {
+  width: 90%;
+  background: rgb(0, 225, 255);
+}
+.skills .content .col-right .bar .python:before {
+  width: 70%;
+  background: rgb(0, 225, 255);
+}
+.skills .content .col-right .bar .node:before {
+  width: 70%;
+  background: rgb(0, 225, 255);
+}
+.skills .content .col-right .bar .react:before {
+  width: 80%;
+  background: rgb(177, 94, 255);
+}
+.skills .content .col-right .bar .redux:before {
+  width: 80%;
+  background: rgb(177, 94, 255);
+}
+.skills .content .col-right .bar .bootstrap:before {
+  width: 90%;
+  background: rgb(177, 94, 255);
+}
+.skills .content .col-right .bar .css:before {
+  width: 90%;
+  background: rgb(177, 94, 255);
+}
+.skills .content .col-right .bar .html:before {
+  width: 100%;
+  background: rgb(177, 94, 255);
+}
+.skills .content .col-right .bar .aws:before {
+  width: 70%;
+  background: rgb(53, 226, 0);
+}
+.skills .content .col-right .bar .google:before {
+  width: 70%;
+  background: rgb(53, 226, 0);
+}
+.skills .content .col-right .bar .mongodb:before {
+  width: 80%;
+  background: rgb(53, 226, 0);
+}
+.skills .content .col-right .bar .mssql:before {
+  width: 80%;
+  background: rgb(53, 226, 0);
+}
+
+.services .content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+.title p {
+  background: #fff;
+  width: 80%;
+}
+
+.services .content .card {
+  background: #fff;
+  width: 400px;
+  margin: 10px;
+  padding: 25px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
+  border-radius: 10px;
+}
+.services .content .card .service-icon {
+  color: rgb(0, 225, 255);
+  font-size: 8em;
+  text-align: center;
+  transition: transform 0.5s ease;
+}
+.services .content .card:hover .service-icon {
+  transform: translateY(-10px);
+}
+.services .content .card .info h3 {
+  color: rgb(0, 225, 255);
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+  text-align: center;
+}
+
+.work {
+  background: #000016;
+}
+.work .content {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+.work .content .card {
+  width: 350px;
+  margin: 15px;
+}
+.work .content .card .card-img {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.work .content .card .card-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+  transition: 0.5s ease;
+}
+.work .content .card .card-img img:hover {
+  transform: scale(1.7);
+}
+
+.contact .content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 20px;
+}
+.contact .content .row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.contact .content .row .card {
+  background: #fff;
+  width: 240px;
+  margin: 20px;
+  padding: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
+  border-radius: 10px;
+}
+.contact .content .row .card .contact-icon {
+  color: #00b899;
+  font-size: 4em;
+  text-align: center;
+  transition: transform 0.5s ease;
+}
+.contact .content .row .card:hover .contact-icon {
+  transform: translateY(-10px);
+}
+.contact .content .row .card .info h3 {
+  color: #111;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+  text-align: center;
+}
+.contact .content .row .card .info span {
+  color: #666;
+  font-weight: 550;
 }
